--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-11 Alexander Dymo <cloudtemple@mksat.net>
+    * Applied rubysupport part, including application and filecreate templates
+      Ruby support is created by Marek Janukowicz <child@t17.ds.pwr.wroc.pl>
+
 2003-04-10  luc willems  <Willems.luc@pandora.be>
 	* add support for perl filecreate templates
 	* make sure declaredinfile is set correctly after adding an item to classstore so removeWithReferences() will work correctly
