--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-14 Harald Fernengel <harry@kdevelop.org>
+    * Diff part is now able to use any kpart that can display 'text/x-diff'
+    * Diff part can display raw output on the fly (if the kpart is too silly to parse the diff)
+
 2003-04-14 Amilcar Lucas <a.lucas@tu-bs.de>
     * Updated integrated Doxywizard (Doxygen Configuration GUI) to 1.3 version.
       This maintains full backward compatibility with previous Doxygen versions.
