--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-04-15 Roberto Raggi <roberto@kdevelop.org>
+    * Added the new persistant class store
+
 2003-04-15 Harald Fernengel <harry@kdevelop.org>
     * The stop-button is now able to stop single parts via drop-down menu.
       If you grep, build, debug and valgrind at the same time, you can terminate
