--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-04-16 Roberto Raggi <roberto@kdevelop.org>
+    * Implemented the support for class inheritance in the new pcs
+
 2003-04-15 Roberto Raggi <roberto@kdevelop.org>
     * Added the new persistant class store
 
