--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-04-26 Alexander Dymo <cloudtemple@mksat.net>
+    * Implemented all documented compiler options in free pascal compiler plugin.
+
 2003-04-25 Jens Dagerbo <jens.dagerbo@swipnet.se>
     * Added KTextEditor::ConfigInterface to QEditor
     * Made changed editor settings apply to all open editors
