--- a/parts/clearcase/README
+++ b/parts/clearcase/README
@@ -1,4 +1,29 @@
 Integrates Clearcase configuration management system into KDevelop.
 Based on Perforce implementation by Harald Fernengel <harry@kdevelop.org>
 
+To use clearcase functions, you need to:
+1. Create a view in which you will keep your project files
+2. Start the view and open project as a view extended directory.
+   IMPORTANT: If you have a view test_vu and your project is located
+             under /vobs/source/project1 you should open the project
+             from /view/test_vu/vobs/source/project1 rather than 
+             inside the view from /vobs/source/project1. File open
+             dialog does not show any files if you do otherwise. Who
+             knows, maybe it will work for you. If so, let me know.
+3. Clearcase functions appear in the popup menu for an open file just 
+   like cvs or perforce.
+4. Functions supported so far are: checkout, checkin, uncheckout, diff,
+   mkelem, and rmname (not rmelem).
+5. For mkelem or rmname, you need to make sure that current directory 
+   is checked out or the operation will fail.
+6. No support for snapshot views yet. I haven't worked with them.
+7. To checkout a directory, select directory in file selector part and use
+   popup-menu.
+
+New enhancements:
+1. Provided a dialog for checkout and checkin comments.
+2. If selected file is not a clearcase file, "ClearCase" menu does not appear
+    in the popup. A filename must start with /view or /vobs to qualify as a
+    clearcase filename.
+
 Author: Ajay Guleria <ajay_guleria at yahoo dot com>
