*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-05-15 Jens Dagerbo <jens.dagerbo@swipnet.se>
+    * Updated BookmarksPart - added tooltips && RMB actions
+
 2003-05-14 Jakob Simon-Gaarde <jakob@simon-gaarde.dk>
   * Trollproject target.path reimplementation
 
