renamed QextMdi* classes to KMdi* renamed qextmdi* files to kmdi* (TODO: rename the lib name;  once it has moved to kdelibs, move it also to kdevelop/lib/compat with the condition to build it for KDE_VERSION < 3.2.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-05-17 F@lk Brettschneider <falkbr@kdevelop.org>
+    * renamed QextMdi classes and files to KMdi
+
 2003-05-16 Alexander Dymo <cloudtemple@mksat.net>
     * Added sourceFormatter() method to KDevPlugin interface and corrected AStylePart to be
       the default source formatter part. Astyle library is separated from the part.
