--- a/parts/bookmarks/README
+++ b/parts/bookmarks/README
@@ -10,10 +10,14 @@ project.
 by Jens Dagerbo <jens.dagerbo@swipnet.se> aka teatime
 
 
+Known bugs / limitations:
+
+# Pre KDE-3.2 / KDE-3.1.3, using source reformatting, or
+the ReplacePart will result in katepart messing up bookmarks
+(and breakpoints). There is no current workaround.
+
 
 Planned development:
-
-# Real persistance - store the bookmarks to the .kdevelop file
 
 # Grouping of bookmarks (?)
 
