--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-05-26 Roberto Raggi <roberto@kdevelop.org>
+    * New Java support
+
 2003-05-24 Roberto Raggi <roberto@kdevelop.org>
     * Added full-screen mode
 
@@ -5,7 +8,7 @@
     * Added tooltips to the watch variable list view so no widget resize is needed
     * Added a opy to clipboard feature for watched variables so their data is available
       for other uses.
- 
+
 2003-05-21 Roberto Raggi <roberto@kdevelop.org>
     * implemented the support for profiles
     * ported kate file selector to kdevelop
